# Phragmen_Voting

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_large_n.py  benchmark_results_large_N.py  benchmark_runtime.py  results.csv  results_large_N.csv
mpc_primitives/: Affine_Combinations_3.1.py  Algorithm14_BitwiseSqrt.py  Algorithm18_KthRanked.py  Protocol1.py  Protocol10.py  Protocol12.py  Protocol13_SecureDivision.py  Protocol15_SecureSqrt.py  Protocol16_maryOR.py  Protocol17_ImprovedmaryOR.py  Protocol2.py  Protocol3.py  Protocol4.py  Protocol5_SecureCompare.py  Protocol6_LessThanHalfP.py  Protocol7_LSB.py  Protocol8_GenRndBitSharing.py  Protocol9_BitwiseLessThan.py  Square_and_Multiply.py  secure_inv.py  share_utils.py
mpc_primitives/mpc_project/: LICENSE  README.md  pyproject.toml
mpc_primitives/mpc_project/mpc_secret_shares/: __init__.py  affine_combinations.py  algorithm14_bitwise_sqrt.py  algorithm18_kth_ranked.py  protocol1.py  protocol10.py  protocol12.py  protocol13_secure_division.py  protocol15_secure_sqrt.py  protocol16_mary_or.py  protocol17_improved_mary_or.py  protocol2.py  protocol3.py  protocol4.py  protocol5_secure_compare.py  protocol6_less_than_half_p.py  protocol7_lsb.py  protocol8_gen_rnd_bit_sharing.py  protocol9_bitwise_less_than.py  secure_inv.py  share_utils.py  square_and_multiply.py
mpc_primitives/mpc_project/tests/: test_protocols.py
pp_phragmen/: __init__.py
protocol/: __init__.py  algorithm1_permutation.py  algorithm2_validation.py  algorithm3_initialization.py  algorithm4_score.py  algorithm5_find_min.py  algorithm6_one_hot.py  algorithm7_wallet_update.py  algorithm8_reconstruct_winner.py  run_election.py  state_manager.py  types.py
tests/: test_algorithm1.py  test_algorithm2.py  test_algorithm3.py  test_algorithm4.py  test_algorithm5.py  test_algorithm6.py  test_algorithm7.py  test_algorithm8.py  test_field_size.py  test_integration.py  test_mpc_enforcement.py  test_run_election.py
