[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc-secret-shares"
version = "0.2.0"
description = "MPC primitives over Shamir secret shares, implemented from the SoK paper"
readme = "README.md"
authors = [{name = "Liran Shem-Tov", email = "liranst13@gmail.com"}]
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
keywords = ["mpc", "secret-sharing", "shamir", "cryptography", "secure-computation"]

[project.urls]
Homepage = "https://github.com/liranst13/mpc-secret-shares"
Issues   = "https://github.com/liranst13/mpc-secret-shares/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mpc_secret_shares*"]
